--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.no-scroll {
+    overflow: hidden;
+    height: 100vh; /* Prevents scrolling vertically */
+  }
+  
+.isActive {
+  @apply text-green-800 font-semibold
+}
